- fix weird spacing user stripe

--- a/client/style.css
+++ b/client/style.css
@@ -37,6 +37,7 @@ body {
 
   padding-bottom: 20px;
   scroll-behavior: smooth;
+  
 }
 
 /* hides scrollbar */
@@ -87,13 +88,13 @@ body {
 }
 
 .message {
-  flex: 1;
+  /* flex: 1; */
 
   color: #dcdcdc;
   font-size: 20px;
 
   max-width: 100%;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
 
   /*
    * white space refers to any spaces, tabs, or newline characters that are used to format the CSS code
@@ -101,10 +102,14 @@ body {
    * The pre-wrap value allows the browser to wrap long lines of text onto multiple lines if necessary.
    * The default value for the white-space property in CSS is "normal". This tells the browser to collapse multiple white space characters into a single space, and to wrap text onto multiple lines as needed to fit within its container.
   */
-  white-space: pre-wrap; 
+  white-space: pre-line; 
 
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+.ai .message {
+  white-space: pre-wrap;
 }
 
 /* hides scrollbar */
